--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   },
   "devDependencies": {
     "@types/styled-components-react-native": "^5.1.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
 }
