--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"axios": "^0.21.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-google-login": "^5.2.2",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"styled-components": "^5.3.0",
 		"web-vitals": "^1.0.1",
@@ -44,6 +46,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-router-dom": "^5.1.8",
 		"@types/styled-components-react-native": "^5.1.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
