--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.14.5",
+		"@babel/plugin-proposal-decorators": "^7.14.5",
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/lab": "^4.0.0-alpha.60",
 		"@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +13,8 @@
 		"@types/react": "^17.0.15",
 		"@types/react-dom": "^17.0.9",
 		"axios": "^0.21.1",
+		"mobx": "^6.3.2",
+		"mobx-react": "^7.2.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-google-login": "^5.2.2",
