--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"css-loader": "4.3.0",
 		"dotenv": "8.2.0",
 		"dotenv-expand": "5.1.0",
+		"env-cmd": "^10.1.0",
 		"eslint": "^7.11.0",
 		"eslint-config-react-app": "^6.0.0",
 		"eslint-plugin-flowtype": "^5.2.0",
@@ -85,7 +86,7 @@
 	"proxy": "https://dapi.kakao.com",
 	"scripts": {
 		"start": "node scripts/start.js",
-		"build": "node scripts/build.js",
+		"build": "env-cmd -f .env.production node scripts/build.js",
 		"test": "node scripts/test.js"
 	},
 	"eslintConfig": {
