--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "plugin:prettier/recommended", 
     "plugin:@typescript-eslint/recommended"
   ],
-  "rules": {     
+
+  "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }]
   },
   "parser":  "@typescript-eslint/parser",  
@@ -20,5 +21,8 @@
     "react":  {
       "version":  "detect"
     }
-  }
+  },
+  "plugins": [
+    "@typescript-eslint", "react"
+  ]
 }
