--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,8 @@ REACT_APP_GOOGLE_CLIENT_ID='813698294782-rekk26ao465t4m9vc555lqh8rj4bvv08.apps.g
 REACT_APP_RBOOK_LIST_KEY=1LoqqwPfIEcYXsMpS7WU_bj8q7tkMaWVmHSM3gbikbvc
 REACT_APP_RBOOK_SHEET_NAME=도서목록 원본
 REACT_APP_KAKAO_API_KEY=KakaoAK 02766f1c35e09097f5e383636baaa3e9
-REACT_APP_BOOK_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com:4500/books
-REACT_APP_BORROW_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com:4500/borrows/book
-REACT_APP_BOOK_UPDATE_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com:4500/books/update
-REACT_APP_RETURN_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com:4500/borrows/return
+REACT_APP_BOOK_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com/books
+REACT_APP_BORROW_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com/borrows/book
+REACT_APP_BOOK_UPDATE_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com/books/update
+REACT_APP_RETURN_URI=http://ec2-52-78-238-91.ap-northeast-2.compute.amazonaws.com/borrows/return
 REACT_APP_DAPI_URL=https://dapi.kakao.com/v3/search/book
