useMemo 적용 및 대여/반납이력 표시

--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ REACT_APP_RBOOK_LIST_KEY=1LoqqwPfIEcYXsMpS7WU_bj8q7tkMaWVmHSM3gbikbvc
 REACT_APP_RBOOK_SHEET_NAME=도서목록 원본
 REACT_APP_KAKAO_API_KEY=KakaoAK 02766f1c35e09097f5e383636baaa3e9
 REACT_APP_BOOK_URI=http://localhost:4500/books
-REACT_APP_BORROW_URI=http://localhost:4500/borrows/book
+REACT_APP_BORROW_URI=http://localhost:4500/borrows
 REACT_APP_BOOK_UPDATE_URI=http://localhost:4500/books/update
 REACT_APP_RETURN_URI=http://localhost:4500/borrows/return
 REACT_APP_DAPI_URL=https://dapi.kakao.com/v3/search/book
