--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 REACT_APP_GOOGLE_CLIENT_ID='813698294782-rekk26ao465t4m9vc555lqh8rj4bvv08.apps.googleusercontent.com'
+REACT_APP_READBOOK=http://localhost:4500
 REACT_APP_BOOK_URI=http://localhost:4500/books
 REACT_APP_BORROW_URI=http://localhost:4500/borrows
 REACT_APP_BOOK_UPDATE_URI=http://localhost:4500/books/update
