환경변수 수정

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 REACT_APP_GOOGLE_CLIENT_ID='813698294782-rekk26ao465t4m9vc555lqh8rj4bvv08.apps.googleusercontent.com'
+REACT_APP_READBOOK=http://ec2-3-36-49-69.ap-northeast-2.compute.amazonaws.com
 REACT_APP_BOOK_URI=http://ec2-3-36-49-69.ap-northeast-2.compute.amazonaws.com/books
 REACT_APP_BORROW_URI=http://ec2-3-36-49-69.ap-northeast-2.compute.amazonaws.com/borrows
 REACT_APP_BOOK_UPDATE_URI=http://ec2-3-36-49-69.ap-northeast-2.compute.amazonaws.com/books/update
